--- a/audit.html
+++ b/audit.html
@@ -91,12 +91,12 @@
       ]
     };
 
-    const IMAGES = {
-      ricks: "images/phillys.png",
-      phillysCowley: "images/phillys.png",
-      phillysStClements: "images/phillys.png",
-      stClaireValentine: "images/phillys.png"
-    };
+    // const IMAGES = {
+    //   ricks: "images/phillys.png",
+    //   phillysCowley: "images/phillys.png",
+    //   phillysStClements: "images/phillys.png",
+    //   stClaireValentine: "images/phillys.png"
+    // };
 
     // --- Render to grid ---
     function render(site){
