--- a/audit.html
+++ b/audit.html
@@ -92,10 +92,10 @@
     };
 
     const IMAGES = {
-      ricks: "images/phillys",
-      phillysCowley: "images/phillys",
-      phillysStClements: "images/phillys",
-      stClaireValentine: "images/phillys"
+      ricks: "images/phillys.png",
+      phillysCowley: "images/phillys.png",
+      phillysStClements: "images/philly.pngs",
+      stClaireValentine: "images/phillys.png"
     };
 
     // --- Render to grid ---
